fix ajax on mobile

--- a/assets/sass/theme/_responsive.scss
+++ b/assets/sass/theme/_responsive.scss
@@ -92,23 +92,23 @@
 		padding: 0 15px;
 		.pane {
 			overflow: hidden;
-			display: block;
+			display: none !important;
 			visibility: hidden;
 			&.active {
 				visibility: visible;
-				display: block;
+				display: block !important;
 			}
 		}
 		.imageWrap {
-			-webkit-column-count: auto;
+			-webkit-column-count: initial;
 			-webkit-column-gap: 0;
-			-moz-column-count: auto;
+			-moz-column-count: initial;
 			-moz-column-gap: 0;
-			-o-column-count: auto;
+			-o-column-count: initial;
 			-o-column-gap: 0;
-			-ms-column-count: auto;
+			-ms-column-count: initial;
 			-ms-column-gap: 0;
-			column-count: auto;
+			column-count: initial;
 			column-gap: 0;
 			line-height: 0;
 			display: block;
